# vibelike

./: .env.example  .gitignore  .gitmodules  AUDIT.md  FEATURE_TEMPLATE.md  IMPROVEMENTS.md  INTEGRATION.md  INTEGRATION_GUIDE.md  MEETING_VIBELIKE_ANALYSIS.md  MONOLITH.md  PLAN_code_idiom_space.md  PROMPT_for_claude_code.md  QUICKSTART.md  QUICKSTART_WORKFLOW.md  README.md  README_FINAL.md  REFACTORING_SUMMARY.md  SESSION_SUMMARY.md  START.md  TEST_REPORT.md  VIBELIKE_OSSIFIKAT_SUBSTRAT.md  VIBELIKE_PROJECT_SUMMARY.md  WORKER_PROGRESS.md  WORKFLOW.md  __init__.py  agent_backends.py  agent_harness.py  agent_inference.py  agent_loop.py  agent_pool.py  agent_tools.py  babel_synthesizer.py  choose_README.md  choose_pyproject.toml  code_idioms.json  config.py  consensus.py  crypto.py  doctor.py  errors.py  (+45 more)
.github/workflows/: ci.yml
adapters/: __init__.py  harvest_adapter.py  terminal_adapter.py  tools_adapter.py
attic/: inkonsistence.py  inkonsistence_verstaendnis.md  ossifikat_audit_bridge.py  static_validator_v2.py  test_complete_stack_integration.py  test_ossifikat_pipeline.py
chaosgarten/: handshake.py  mentions.py  reactions.py  test_handshake.py  test_mentions.py  test_reactions.py
choose/: __init__.py  atom.py  bundle.py  choice.py  predicate.py
choose_tests/: test_atom.py  test_determinism.py  test_escalation.py  test_undecidable.py
choose_tests/examples/: demo_iteration.py
data/: code_archive.monolith.bak-20260520-165954  code_archive.monolith.bak-20260520-170052  code_centroid.npy
deploy/: hotr-retrieval.service  hotr-web.service  systemd-install.md  vibeweb-start.sh
experiments/: bridge_finder.py  bridges_to_ossifikat.py  deepseek_micro_probe.py  deepseek_minimal_probe.py  deepseek_refusal_probe.py  diagnose_retrieval.py  healthpoint_drift_test.py  ossifikat_staleness_test.py  run_analysis_test.py  run_chaosgarten_test.py  run_imp_test.py  run_mitte_test.py  run_reactions_test.py
framework/quelibrium/core/: paths.py  protocol.py  thermal_reader.py  vault.py
framework/quelibrium/intelligence/: resonance.py  retrieval.py
hotr/: predicate_registry.py  workflow_integration_example.py  workflow_memory.py
logdb/: __init__.py  db.py
logs/: analysis-20260519-210543.md  analysis-20260521-071211.md  analysis-20260521-073636.md  analysis-20260521-074134.md  analysis-20260521-075226.md  analysis-20260521-080351.md  analysis-20260521-152226.md  analysis-20260601-144146.md  analysis-20260601-224846.md  analysis-20260602-022844.md  analysis-20260602-080116.md  analysis-20260602-234201.md  analysis-20260603-160428.md  analysis-20260609-081719.md  analysis-20260609-105912.md  analysis-20260609-234408.md  analysis-20260609-235645.md  full_test_results.json
models/: base.py  ollama.py  request.py
reqqueue/: __init__.py  health.py  manager.py  reminders.py  worker.py
sandbox/: __init__.py  manager.py  models.py
scripts/: import_projekt_wissen.py  pre-commit-hook.sh  reconstruct_combined_vault.py  server-restart.sh
tests/: __init__.py  conftest.py  test_action_decider_repair.py  test_adapters.py  test_agent_loop.py  test_doctor.py  test_idiom_feedback.py  test_model_fallback.py  test_p3_parallel.py  test_queue.py  test_regression_guard.py  test_requests.py  test_sandbox.py  test_tools.py
tools/: __init__.py  cache.py  models.py  registry.py
tools/echo-tool/: echo-tool.sh  tool.yaml
web/: README.md  api_manager.py  auth.py  pair_admin.py  ratification.py  server.py  terminal_ws.py
web/static/: app.js  dash.css  index.html
workflow/: __init__.py  base.py  code_analyzer.py  prompt_builder.py
