[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibelike"
version = "0.1.0"
description = "Code Knowledge Harvesting, Tool Documentation Collection, and Interactive CLI with Knowledge Graph Storage"
readme = "START.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Jakob Notter", email = "jakobnotter89@googlemail.com"}
]

dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
    "requests>=2.28.0",
    "numba>=0.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
ossifikat = [
    "ossifikat>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/jnrabit/vibelike"
Documentation = "https://github.com/jnrabit/vibelike#readme"
Repository = "https://github.com/jnrabit/vibelike.git"

[project.scripts]
vibelike-harvest = "vibelike.harvest:main"
vibelike-terminal = "vibelike.terminal:main"
vibelike-tools = "vibelike.tools_harvester:main"

[tool.setuptools]
py-modules = ["harvest", "terminal", "tools_harvester"]

[tool.setuptools.packages.find]
where = ["."]
include = ["adapters*", "framework*", "reqqueue*", "sandbox*", "tools*", "models*", "logdb*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W"]
ignore = ["E501", "E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=vibelike --cov-report=term-missing"
