[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibelike"
version = "0.1.0"
description = "Code Knowledge Harvesting, Tool Documentation Collection, and Interactive CLI with Knowledge Graph Storage"
readme = "START.md"
requires-python = ">=3.9"
license = "CC-BY-NC-4.0"
authors = [
    {name = "Jakob Notter", email = "jakobnotter89@googlemail.com"}
]

dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
    "requests>=2.28.0",
    "pydantic-settings>=2.0.0",
    "numba>=0.56.0",
    "feedparser>=6.0.0",
    "anthropic>=0.7.0",
    "mistral-common>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.19.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "beautifulsoup4>=4.12.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
ossifikat = [
    "ossifikat>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/jnrabit/vibelike"
Documentation = "https://github.com/jnrabit/vibelike#readme"
Repository = "https://github.com/jnrabit/vibelike.git"

[project.scripts]
vibelike-harvest = "vibelike.harvest:main"
vibelike-terminal = "vibelike.terminal:main"
vibelike-tools = "vibelike.tools_harvester:main"
vibelike-harvest-worker = "vibelike.harvest_worker:main"
vibelike-harvest-scheduler = "vibelike.harvest_scheduler:main"

[tool.setuptools]
packages = ["vibelike", "vibelike.adapters", "vibelike.framework", "vibelike.reqqueue", "vibelike.sandbox", "vibelike.tools", "vibelike.models", "vibelike.logdb", "vibelike.web", "vibelike.ossifikat"]
package-dir = {"vibelike" = "."}

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W"]
ignore = ["E501", "E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=vibelike --cov-report=term-missing"
